# bevy_play_card

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: change_logs.md  tween_priorities_to_others_of_type.md  using_the_crate.md
examples/: TODO_multiple_lines.rs  arced_cards.rs  automatic_wave.rs  card_stacking.rs  cards_on_a_line.rs  disposable_cards.rs  disposable_cards_plus.rs  multiple_card_lines.rs  single_card.rs  use_examples.md  using_card_tags.rs  using_hovered_and_dragged_cards.rs
src/: bevy_card_plugin.rs  consts.rs  generic_plugins.rs  lib.rs  trait_unions.rs
src/cards/: card.rs  card_animation_request_handler.rs  card_bundle.rs  card_consts.rs  card_dragging_manager.rs  card_hovering_manager.rs  card_mover.rs  card_namer.rs  card_picking_manager.rs  cards_spawner.rs  component_removal_request_listener.rs  consts.rs  event.rs  mod.rs  tags.rs
src/cards/card_lines/: card_line.rs  card_line_bundle.rs  card_line_entities.rs  card_lines_content_manager.rs  card_lines_mover.rs  card_lines_spawner.rs  card_picking_policy.rs  consts.rs  event.rs  mod.rs
src/cards/card_managers/: card_dragging_manager.rs  card_hovering_manager.rs  card_observer_attacher.rs  card_origin_set_listener.rs  card_picking_manager.rs  card_tag_change_listener.rs  card_tag_insertion_listener.rs  mod.rs
src/ecs/: component_utilities.rs  mod.rs  system_sets.rs
src/ecs/despawning/: despawn_request.rs  despawn_request_handler.rs  mod.rs
src/helpers/: argument_validation.rs  calculation_helpers.rs  mismatch_error.rs  mod.rs  vector_utilities.rs
src/macros/: make_namer.rs  mod.rs  return_and_notify.rs
src/tweening/: animation_parent_destoryer.rs  mod.rs  tween_destoryer.rs  tween_priority.rs
src/utilities/: action_performed.rs  mod.rs  system_sets.rs  vector_utilities.rs
tests/: picking_tests.rs
