[package]
name = "bevy_play_card"
version = "0.2.6"
edition = "2024"
repository = "https://github.com/Rabbival/bevy_play_card"
homepage = "https://github.com/Rabbival/bevy_play_card"
license = "MIT OR Apache-2.0"
description = "A card crate for the Bevy game engine"
authors = ["Rabbival"]
readme = "README.md"
keywords = ["bevy", "card", "cards"]
categories = ["game-development"]

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "bevy_window",
    "bevy_core_pipeline",
    "bevy_sprite",
    "png",
    "bevy_picking",
    "bevy_sprite_picking_backend",
    "serialize",
    "x11"
]

[dependencies]
bevy_tween = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 1     # less precise locations

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false # no debug symbols for deps
opt-level = 2 # makes their code smaller too
